Added tests , fixes bugs and write readme
